fix: check ParseToken err
